packages/typ/tests/fixtures/diagnostics/0677_fcm_local_abstract_wrong_arg_02.ml.expected
File "0677_fcm_local_abstract_wrong_arg_02.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0677_fcm_local_abstract_wrong_arg_02 is not a valid module name.

File "0677_fcm_local_abstract_wrong_arg_02.ml", line 14, characters 61-65:
14 | let _ = use_beta (module M_beta : Id_beta with type t = int) true
                                                                  ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
